# lightswitch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
_dev-docs/: desired-specs.md  technical-specification.md
docs/: backlog.md  index.html  technical-specification.md
src/: clipboard.rs  colors.rs  config.rs  conversion.rs  hooks.rs  hotkeys.rs  icon.rs  input.rs  layouts.rs  logger.rs  main.rs  tables.rs  ui.rs  uia.rs
