[package]
name = "lightswitch"
version = "0.2.0"
edition = "2024"
description = "Lightweight keyboard layout switcher with text conversion for Windows"
license = "MIT"
repository = "https://github.com/zergius-eggstream/lightswitch"
homepage = "https://github.com/zergius-eggstream/lightswitch"
readme = "README.md"
authors = ["zergius-eggstream"]
keywords = ["keyboard", "layout", "switcher", "tray", "windows"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",   # Clipboard
    "Win32_System_Memory",         # GlobalAlloc for clipboard
    "Win32_System_Ole",            # CF_UNICODETEXT
    "Win32_System_Registry",       # Autostart
    "Win32_Globalization",         # GetLocaleInfoW
    "Win32_UI_TextServices",       # GetForegroundWindow thread layout
    "Win32_UI_Controls",           # DRAWITEMSTRUCT, ODS_FOCUS
    "Win32_UI_Controls_Dialogs",   # ChooseColorW
]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip debug symbols
codegen-units = 1   # Better optimization
